# protologic-lua

./: .gitignore  CMakeLists.txt  build.sh  copy_generated.sh  protolua.py  protolua.sh  protolua_out_utils.py  readme.md  release.sh  test.sh
include/: asyncify.h  wizer.h  wizer_modified.h
include/protologic/: Quaternion.h  RadarContactInfo.h  RadarTargetInfo.h  Vector3.h  _import.h  actions.h  constants.h  consts.h  enums.h  macros.h  protologic.h  protologic.hpp  queries.h  special.h  wasi.h
lib/fill/: CMakeLists.txt  fill.c  setjmp.c  setjmp.cpp  setjmp.h
lib/lua/: CMakeLists.txt
lua_lib/protolua/: init.lua  out_utils.lua
lua_template/: .gitignore
lua_template/lua/: init.lua
lua_template/lua/protolua/: init.lua  target_types.lua
lua_typing/: RadarContactInfo.lua  RadarTargetInfo.lua  actions.lua  constants.lua  constants_vars.lua  globals.lua  protolua.lua  queries.lua
src/: global.hpp  lua_protologic.cpp  lua_protologic.hpp  main.cpp  protolua.cpp  protolua.hpp  utils.cpp  utils.hpp
src/protologic/: lua_globals.cpp  lua_globals.hpp  lua_protologic.cpp  lua_protologic.hpp
